CREATE TABLE customer (
	cust_no INTEGER PRIMARY KEY,
	cust_name TEXT NOT NULL,
	cust_city TEXT NOT NULL
);

CREATE TABLE vehicle (
	plate TEXT PRIMARY KEY,
	cust_no INTEGER NOT NULL,
	make TEXT NOT NULL,
	model TEXT NOT NULL,
	year INTEGER NOT NULL,
	FOREIGN KEY (cust_no) REFERENCES customer(cust_no)
	ON DELETE RESTRICT ON UPDATE CASCADE
);

CREATE TABLE mechanic (
	mech_id INTEGER PRIMARY KEY,
	mech_name TEXT NOT NULL,
	hourly_rate REAL NOT NULL CHECK (hourly_rate >0)
);

CREATE TABLE "order" (
	order_no INTEGER PRIMARY KEY,
	plate TEXT NOT NULL,
	cust_no INTEGER NOT NULL,
	date DATE NOT NULL,
	FOREIGN KEY (plate) REFERENCES vehicle(plate) ON DELETE RESTRICT ON UPDATE CASCADE,
	FOREIGN KEY (cust_no) REFERENCES customer(cust_no) ON DELETE RESTRICT ON UPDATE CASCADE
);

CREATE TABLE work_item (
	order_no INTEGER NOT NULL,
	item_no INTEGER NOT NULL,
	mech_id INTEGER NOT NULL,
	description TEXT NOT NULL,
	hours REAL NOT NULL CHECK (hours > 0),
	PRIMARY KEY(order_no,item_no),
	FOREIGN KEY (order_no) REFERENCES "order"(order_no) ON DELETE RESTRICT ON UPDATE CASCADE,
	FOREIGN KEY (mech_id) REFERENCES mechanic(mech_id) ON DELETE RESTRICT ON UPDATE CASCADE
);

